[material] -> add new api: getMaterialDict
