# DBMS_project/backend/swagger_output.json
@@ -202,6 +202,39 @@
         "responses": {}
       }
     },
+    "/material/getMaterialDict": {
+      "post": {
+        "tags": [
+          "Material"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "userId": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "取得成功"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "409": {
+            "description": "使用者不存在"
+          }
+        }
+      }
+    },
     "/material/newMaterial": {
       "post": {
         "tags": [
